feat: add total elements and pages
