# backend/src/main/java/com/mav/buildscale/controller/ReportController.java
@@ -3,10 +3,13 @@ package com.mav.buildscale.controller;
 import com.mav.buildscale.api.ReportsApi;
 import com.mav.buildscale.api.model.AddReport201Response;
 import com.mav.buildscale.api.model.ReportDto;
+import com.mav.buildscale.api.model.ReportListDto;
 import com.mav.buildscale.mapper.ReportMapper;
 import com.mav.buildscale.model.Report;
 import com.mav.buildscale.repository.ReportRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
@@ -25,15 +28,15 @@ public class ReportController implements ReportsApi {
     private final ReportMapper reportMapper;
 
     @Override
-    public ResponseEntity<List<ReportDto>> getReports(final Integer page, final Integer size, final List<String> sort) {
-        final Pageable pageable = Pageable
-                .ofSize(size)
-                .withPage(page);
-        pageable.getSort().and(Sort.sort(Report.class).by(Report::getCreated).descending());
-        final List<ReportDto> reportDtos = reportRepository.findAll(pageable).stream()
-                .map(reportMapper::mapReportToReportDto)
-                .toList();
-        return ResponseEntity.ok(reportDtos);
+    public ResponseEntity<ReportListDto> getReports(final Integer page, final Integer size, final List<String> sort) {
+        PageRequest pageRequest = PageRequest.of(page, size);
+        pageRequest.withSort(Sort.sort(Report.class).by(Report::getCreated).descending());
+
+        Page<Report> result = reportRepository.findAll(pageRequest);
+        return ResponseEntity.ok(new ReportListDto()
+                .totalElements(result.getTotalElements())
+                .totalPages(result.getTotalPages())
+                .elements(result.map(reportMapper::mapReportToReportDto).toList()));
     }
 
     @Override
