# backend/src/main/resources/api.yaml
@@ -20,9 +20,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ReportDto"
+                $ref: "#/components/schemas/ReportListDto"
         default:
           description: Unexpected error
           content:
@@ -122,6 +120,19 @@ components:
     ReportId:
       description: Id of a report
       type: string
+
+    ReportListDto:
+      type: object
+      properties:
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+        elements:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReportDto'
 
     ReportDto:
       type: object
